	* HoTTAdapter2* - fix scale synchronization reference channels from 82 to 87
	* HoTTAdapter2* - synchronize scale GPS-Speed and AirSpeed
	* Core-Telemetry - fix assignment of parsed data with modified name (duplication)
	* Weatronic-Telemetry - add error handling for corrupt log files
	* GPS-Logger3 - add HoTT speed type configuration
	* GPS-Logger2/3 - take real GPS altitude from SMGPS instead of value from GNS/GGA
	* GPS-Logger* - fix parsing RMC sentence while status V 
	* Junsi DX6/8 - add initial support

Version 3.5.0 - 13 Sep 2021
Generic changes/fixes
	* fix file comment tab update
	* fix missing update device selection dialog, port selection combo
	* fix missing hint for udev rule or dummy driver while using USB native communication
	* fix DevicePropertiesEditor opening measurement item context menu
	* update DeviceProperties XSD to exchange device XML (add measurements HoTTAdapter*)
	
Device specific changes/fixes
	* HitecX1Red - change voltage parsing to unsigned
	* iMAX BC6 - fix firmware message 
	* Core-Telemetry - update log reader
	* Modster200 - add initial support
	* Modster600 - add initial support outlet A only
	* HoTTAdapter* - add SM MicroVario acceleration values
	* GPS-Logger* - prepare GNS sentence for firmware >= 1.28

Version 3.4.9 - 14 Jun 2021
Generic changes/fixes
	* remove property enumeration value="tolerate_sign_change"
	* add log output detecting possible corrupt file creating history
	* codesign Mac OS X - add time stamp and identifier to dmg
	* Schema update (V43) to reflect removed property as well as updated device XML
	* add IDevice method to correct channel if required (simplified OSD from GDE Android)
	
Device specific changes/fixes
	* HoTTAdapter* - remove dependency to property using North/South hemisphere, as well as East/West of meridian
	* HoTTAdapter* - rename variable GPS values in XML to propagate to history analysis
	* HoTTAdapter* - correct offset MSL altitude if contained in GPS in *.log