@@ -1304,7 +1304,7 @@ public class NMEAParser implements IDataParser {
 		//this.values[22] = Airspeed [km/h];
 		//this.values[23] = static Airpressure [hPa];
 		//this.values[24] = Airpressure TEK [hPa];
-		//this.values[24] = this.values[24]-this.values[23];
+		this.values[24] = this.values[24]-this.values[23];
 		//this.values[25] = Vario TEK [m/s];
 	}
 
